outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval2320746099408686648_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance decreasing as unvisited nodes decrease (weight = 0.4 / (1 + remaining_nodes)), while penalizing nodes far from the destination (30% of remaining weight) to balance exploration and efficiency.}
                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance decreasing as unvisited nodes decrease (weight = 0.4 / (1 + remaining_nodes)), while penalizing nodes far from the destination (30% of remaining weight) to balance exploration and efficiency.}
                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'
